--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 python-dotenv==1.0.1
+Werkzeug==3.0.4
 requests==2.32.3
-marshmallow-dataclass==8.7.1
+dataclass_wizard==0.22.3
 beautifulsoup4==4.12.3
 markdownify==0.13.1
-Werkzeug==3.0.4
